--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,15 +55,9 @@ h4 {
   border-bottom: 1px solid purple;
   margin: 2em auto;
 }
-
-/* Now on sale */
-.bg-img1 {
-  background-image: url("../tile\ \(15\).jpg");
-  background-position: center;
-  background-size: cover;
+.img-fit {
+  object-fit: cover;
 }
-.bg-img2 {
-  background-image: url("../tile\ \(38\).jpg");
-  background-position: center;
-  background-size: cover;
+.right47 {
+  object-position: 47%;
 }
